Visible, fixed clases

--- a/css/init/layout.css
+++ b/css/init/layout.css
@@ -14,7 +14,6 @@
     --col10: calc(var(--col9) + var(--cg));
     --col11: calc(var(--col10) + var(--cg));
     --col12: calc(var(--col11) + var(--cg));
-  
     --ml1: calc(var(--col1) + 3 * var(--half-gap));
     --ml2: calc(var(--ml1) + var(--cg));
     --ml3: calc(var(--ml2) + var(--cg));
@@ -27,7 +26,6 @@
     --ml10: calc(var(--ml9) + var(--cg));
     --ml11: calc(var(--ml10) + var(--cg));
   }
-  
   .container {
     display: inline-block;
     width: 100%;
@@ -81,7 +79,6 @@
   .container > .row > .col-12 {
     width: var(--col12);
   }
-  
   .container > .row > .ml-1 {
     margin-left: var(--ml1);
   }
@@ -116,7 +113,19 @@
     margin-left: var(--ml11);
   }
   
+  .container > .row > .visible {
+    display: inline-block;
+  }
+  .container > .row > .hidden {
+    display: none;
+  }
+  
   @media (min-width: 575px) {
+    .container > .row {
+      width: 540px;
+      margin-left: calc(50% - 270px);
+      margin-right: calc(50% - 270px);
+    }
     .container > .row > .col-sm-1 {
       width: var(--col1);
     }
@@ -153,7 +162,6 @@
     .container > .row > .col-sm-12 {
       width: var(--col12);
     }
-  
     .container > .row > .ml-sm-1 {
       margin-left: var(--ml1);
     }
@@ -187,9 +195,21 @@
     .container > .row > .ml-sm-11 {
       margin-left: var(--ml11);
     }
+  
+    .container > .row > .visible-sm {
+      display: inline-block;
+    }
+    .container > .row > .hidden-sm {
+      display: none;
+    }
   }
   
   @media (min-width: 767px) {
+    .container > .row {
+      width: 720px;
+      margin-left: calc(50% - 360px);
+      margin-right: calc(50% - 360px);
+    }
     .container > .row > .col-md-1 {
       width: var(--col1);
     }
@@ -226,7 +246,6 @@
     .container > .row > .col-md-12 {
       width: var(--col12);
     }
-  
     .container > .row > .ml-md-1 {
       margin-left: var(--ml1);
     }
@@ -260,9 +279,21 @@
     .container > .row > .ml-md-11 {
       margin-left: var(--ml11);
     }
+  
+    .container > .row > .visible-md {
+      display: inline-block;
+    }
+    .container > .row > .hidden-md {
+      display: none;
+    }
   }
   
   @media (min-width: 991px) {
+    .container > .row {
+      width: 960px;
+      margin-left: calc(50% - 480px);
+      margin-right: calc(50% - 480px);
+    }
     .container > .row > .col-lg-1 {
       width: var(--col1);
     }
@@ -299,7 +330,6 @@
     .container > .row > .col-lg-12 {
       width: var(--col12);
     }
-  
     .container > .row > .ml-lg-1 {
       margin-left: var(--ml1);
     }
@@ -333,9 +363,21 @@
     .container > .row > .ml-lg-11 {
       margin-left: var(--ml11);
     }
+  
+    .container > .row > .visible-lg {
+      display: inline-block;
+    }
+    .container > .row > .hidden-lg {
+      display: none;
+    }
   }
   
   @media (min-width: 1199px) {
+    .container > .row {
+      width: 1140px;
+      margin-left: calc(50% - 570px);
+      margin-right: calc(50% - 570px);
+    }
     .container > .row > .col-xl-1 {
       width: var(--col1);
     }
@@ -372,7 +414,6 @@
     .container > .row > .col-xl-12 {
       width: var(--col12);
     }
-  
     .container > .row > .ml-xl-1 {
       margin-left: var(--ml1);
     }
@@ -406,9 +447,21 @@
     .container > .row > .ml-xl-11 {
       margin-left: var(--ml11);
     }
+  
+    .container > .row > .visible-xl {
+      display: inline-block;
+    }
+    .container > .row > .hidden-xl {
+      display: none;
+    }
   }
   
   @media (min-width: 1399px) {
+    .container > .row {
+      width: 1320px;
+      margin-left: calc(50% - 660px);
+      margin-right: calc(50% - 660px);
+    }
     .container > .row > .col-xxl-1 {
       width: var(--col1);
     }
@@ -445,7 +498,6 @@
     .container > .row > .col-xxl-12 {
       width: var(--col12);
     }
-  
     .container > .row > .ml-xxl-1 {
       margin-left: var(--ml1);
     }
@@ -478,5 +530,12 @@
     }
     .container > .row > .ml-xxl-11 {
       margin-left: var(--ml11);
+    }
+  
+    .container > .row > .visible-xxl {
+      display: inline-block;
+    }
+    .container > .row > .hidden-xxl {
+      display: none;
     }
   }
